# stravnik

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json
.woodpecker/: ci.yml
src/: args.rs  credentials.rs  env.rs  index.ts  listen.ts  logger.rs  main.rs  meal_data.rs  meals.rs  meals.ts  send.ts  services.rs  sync.rs
src/discord/: env.rs  mod.rs  send.rs
src/icanteen/: client.rs  env.rs  meals.rs  mod.rs
src/matrix/: env.rs  message.rs  mod.rs  sync.rs
src/ntfy/: env.rs  mod.rs  send.rs
src/strava/: client.rs  env.rs  meals.rs  mod.rs
stravnik-core/: Cargo.toml  errors.rs  lib.rs  meal_data.rs  services.rs  utils.rs
stravnik-core/icanteen/: client.rs  meals.rs  mod.rs
stravnik-core/strava/: client.rs  meals.rs  mod.rs  s5.rs
stravnik-notifications/: Cargo.toml
stravnik-notifications/src/: errors.rs  formatting.rs  lib.rs
stravnik-notifications/src/discord/: send.rs
stravnik-notifications/src/matrix/: credentials.rs  fmt.rs  message.rs  mod.rs  sync.rs
stravnik-notifications/src/ntfy/: client.rs  mod.rs  send.rs
