[workspace]
members = [".", "stravnik-core", "stravnik-notifications"]
resolver = "2"

[package]
name = "stravnik"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["matrix", "discord"]
matrix = ["stravnik-notifications/matrix"]
discord = ["stravnik-notifications/discord"]

[dependencies]
stravnik-core = { path = "stravnik-core" }
stravnik-notifications = { path = "stravnik-notifications", default-features = false }
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
eyre = { version = "0.6.5", package = "color-eyre" }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
