[package]
name = "stravnik-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.16", default-features = false, features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24.0"
regex = "1.12.2"
log = "0.4.21"
chrono = "0.4.38"
thiserror = "2.0.17"

[lib]
path = "lib.rs"
