[package]
name = "stravnik-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", default-features = false, features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24.0"
regex = "1.12.2"
log = "0.4.28"
chrono = "0.4.42"
thiserror = "2.0.17"

[lib]
path = "lib.rs"
