[package]
name = "stravnik-notifications"
version = "0.1.0"
edition = "2024"

[dependencies]
stravnik-core = { path = "../stravnik-core" }
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.21"
matrix-sdk = { version = "0.7.1", features = ["markdown"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "2.0.17"
