[package]
name = "stravnik-notifications"
version = "0.1.0"
edition = "2024"

[features]
default = []
matrix = ["dep:matrix-sdk"]
discord = []

[dependencies]
stravnik-core = { path = "../stravnik-core" }
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.28"
matrix-sdk = { version = "0.14.0", default-features = false, features = ["markdown", "rustls-tls"], optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
